--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1237,6 +1237,61 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   doi     = {10.1016/j.mex.2018.09.001},
 }
 
+@PhdThesis{classen2019,
+  author = {Anton Classen},
+  school = {{Friedrich-Alexander-Universit\"at}},
+  title  = {Enhancing x-ray diffractive imaging andoptical microscopy by use of intensity correlations},
+  year   = {2019},
+}
+
+@InProceedings{padfield2010,
+  author       = {Padfield, Dirk},
+  booktitle    = {2010 IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+  title        = {Masked FFT registration},
+  year         = {2010},
+  organization = {IEEE},
+  pages        = {2918--2925},
+}
+
+@Article{lehmkuhler2021,
+  author         = {Lehmkühler, Felix and Roseker, Wojciech and Grübel, Gerhard},
+  journal        = {Applied Sciences},
+  title          = {From Femtoseconds to Hours—Measuring Dynamics over 18 Orders of Magnitude with Coherent X-rays},
+  year           = {2021},
+  issn           = {2076-3417},
+  number         = {13},
+  volume         = {11},
+  abstract       = {X-ray photon correlation spectroscopy (XPCS) enables the study of sample dynamics between micrometer and atomic length scales. As a coherent scattering technique, it benefits from the increased brilliance of the next-generation synchrotron radiation and Free-Electron Laser (FEL) sources. In this article, we will introduce the XPCS concepts and review the latest developments of XPCS with special attention on the extension of accessible time scales to sub-μs and the application of XPCS at FELs. Furthermore, we will discuss future opportunities of XPCS and the related technique X-ray speckle visibility spectroscopy (XSVS) at new X-ray sources. Due to its particular signal-to-noise ratio, the time scales accessible by XPCS scale with the square of the coherent flux, allowing to dramatically extend its applications. This will soon enable studies over more than 18 orders of magnitude in time by XPCS and XSVS.},
+  article-number = {6179},
+  doi            = {10.3390/app11136179},
+}
+
+@Article{bostedt2010,
+  author    = {Bostedt, Christoph and Adolph, Marcus and Eremina, Ekaterina and Hoener, Matthias and Rupp, Daniela and Schorb, Sebastian and Thomas, Heiko and de Castro, Antonio RB and M{\"o}ller, Thomas},
+  journal   = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+  title     = {Clusters in intense FLASH pulses: ultrafast ionization dynamics and electron emission studied with spectroscopic and scattering techniques},
+  year      = {2010},
+  number    = {19},
+  pages     = {194011},
+  volume    = {43},
+  publisher = {IOP Publishing},
+}
+
+@Article{grubel2007,
+  author   = {G. Grübel and G.B. Stephenson and C. Gutt and H. Sinn and Th. Tschentscher},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  title    = {{XPCS at the European X-ray free electron laser facility}},
+  year     = {2007},
+  issn     = {0168-583X},
+  number   = {2},
+  pages    = {357-367},
+  volume   = {262},
+  abstract = {The European X-ray free electron laser source (XFEL) will provide highly brilliant (B>1033ph/s/mm2/mrad2/0.1% bw) and coherent X-ray beams. The pulse structure and the unprecedented brightness will allow one for the first time to study fast dynamics in the time domain, thus giving direct access to the dynamic response function S(Q,t), instead of S(Q,ω), which is of central importance for a variety of phenomena such as fast non-equilibrium dynamics initiated, e.g. by a short pump pulse. X-ray photon correlation spectroscopy (XPCS) measures the temporal changes in speckle patterns produced when coherent light is scattered by a disordered system and therefore allows to measure S(Q,t). This paper summarizes important aspects of the scientific case for an XPCS instrument at the planned XFEL. Novel XPCS set-ups are illustrated.},
+  doi      = {https://doi.org/10.1016/j.nimb.2007.05.015},
+  keywords = {X-ray photon correlation spectroscopy (XPCS), X-ray free electron laser (XFEL), X-ray Scattering, X-ray speckles, Time domain dynamics, Pump–probe studies},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0168583X07011068},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
