--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,4 +1,5 @@
 \chapter{Experimental Verification}
+\label{chap:experiment}
 An initial experimental proof of principle experiment was performed at the SACLA FEL.
 The experiments consisted of three parts: First, reproducing XXX and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$\alpha$  fluorescence and an reconstruction in the small angle regime. Second, moving the a smaller length scale and try to image nanoparticles. And Third, leaving the small angle regime and record the fluoresccne of a single crystal and perform a reciprocal space reconstruction.
 \section{Sample Preparation and Characterization}
@@ -121,7 +122,7 @@ Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaA
 \begin{figure}[tp]
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/gaas_sample.pdf}
-	\caption[GaAs Sample]{Sketch of the GaAs single crystal glued to a fused silica cover slip and Cu-K$\alpha$ XRD measurement of the GaAs (004) reflex, showing a single crystal. After mounting on the cover slip, the peak is slightly broadened, most likely by an slighly uneven thickness of the glue layer. }
+	\caption[GaAs Sample]{Sketch of the GaAs single crystal glued to a fused silica cover slip and Cu-K$\alpha$ XRD measurement of the GaAs (004) reflex, performed by B. Reeves, showing a single crystal. After mounting on the cover slip, the peak is slightly broadened, most likely by an slightly uneven thickness of the glue layer  leading to bending of the thin crystal.}
 	\label{fig:gaas_sample}
 \end{figure}
 
@@ -136,7 +137,7 @@ The samples were scanned with a mean step size of 20\,um in horizontal direction
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\linewidth]{images/setup.pdf}
+	\includegraphics[width=0.75\linewidth]{images/setup.pdf}
 	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is XXX. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The dual detector is mounted $d_{dual}$=1\,m away from the sample in a XXX angle. To reduce air scattering, a vacuum tube is installed in the path from sample to dual.}
 	\label{fig:setup}
 \end{figure}
