--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -142,7 +142,8 @@
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/ox18.pdf}
 	\caption[SAXS of AAO membrane sample]{SAXS measurement of one of the AAO membranes used for the LCLS experiment, showing well defined features which can be used in an IDI measurement.}
-	\label{fig:kosselgaasmean}
+	\label{fig:saxsaao}
 \end{figure}
+
 
 
