--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -592,7 +592,7 @@
   groups    = {msc},
 }
 
-@Article{hanburry1956,
+@Article{hanbury1956,
   author   = {Hanbury Brown, Robert and Twiss, Richard Q.},
   journal  = {Nature},
   title    = {Correlation between Photons in two Coherent Beams of Light},
@@ -1290,6 +1290,63 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   doi      = {https://doi.org/10.1016/j.nimb.2007.05.015},
   keywords = {X-ray photon correlation spectroscopy (XPCS), X-ray free electron laser (XFEL), X-ray Scattering, X-ray speckles, Time domain dynamics, Pump–probe studies},
   url      = {https://www.sciencedirect.com/science/article/pii/S0168583X07011068},
+}
+
+@Book{dirac1958,
+  author    = {P. A. M. Dirac},
+  publisher = {Oxford University Press},
+  title     = {The Principles of Quantum Mechanics},
+  year      = {1958},
+  edition   = {Fourth},
+  pages     = {9},
+}
+
+@Article{glauber1963,
+  author    = {Glauber, Roy J},
+  journal   = {Physical Review},
+  title     = {The quantum theory of optical coherence},
+  year      = {1963},
+  number    = {6},
+  pages     = {2529},
+  volume    = {130},
+  publisher = {APS},
+}
+
+@Article{nakumura2020,
+  author   = {Nakamura, Nami and Matsuyama, Satoshi and Inoue, Takato and Inoue, Ichiro and Yamada, Jumpei and Osaka, Taito and Yabashi, Makina and Ishikawa, Tetsuya and Yamauchi, Kazuto},
+  journal  = {Journal of Synchrotron Radiation},
+  title    = {{Focus characterization of an X-ray free-electron laser by intensity correlation measurement of X-ray fluorescence}},
+  year     = {2020},
+  month    = {Sep},
+  number   = {5},
+  pages    = {1366--1371},
+  volume   = {27},
+  abstract = {This paper proposes and demonstrates a simple method using the intensity correlation of X-ray fluorescence to evaluate the focused beam size of an X-ray free-electron laser (XFEL). This method was applied to the sub-micrometre focused XFEL beam at the SPring-8 Angstrom Compact Free Electron Laser, and the beam size evaluated using the proposed method was consistent with that measured using the knife-edge scan method. The proposed method is readily applicable to extremely small X-ray spots and can be applied for the precise diagnostics of sub-10nm focused X-ray beams which have recently emerged.},
+  doi      = {10.1107/S1600577520009868},
+  keywords = {Intensity correlation, X-ray focusing, focus characterization, X-ray fluorescence, X-ray free-electron lasers, SACLA},
+}
+
+@Article{gorobtsov2018,
+  author    = {Gorobtsov, O Yu and Mukharamova, Nastasia and Lazarev, Sergey and Chollet, Matthieu and Zhu, Diling and Feng, Yiping and Kurta, Ruslan P and Meijer, J-M and Williams, Garth and Sikorski, M and others},
+  journal   = {Scientific reports},
+  title     = {Diffraction based Hanbury Brown and Twiss interferometry at a hard x-ray free-electron laser},
+  year      = {2018},
+  number    = {1},
+  pages     = {1--9},
+  volume    = {8},
+  doi       = {10.1038/s41598-018-19793-1},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{schneider2018,
+  author    = {Schneider, Raimund and Mehringer, Thomas and Mercurio, Giuseppe and Wenthaus, Lukas and Classen, Anton and Brenner, G{\"u}nter and Gorobtsov, Oleg and Benz, Adrian and Bhatti, Daniel and Bocklage, Lars and others},
+  journal   = {Nature Physics},
+  title     = {Quantum imaging with incoherently scattered light from a free-electron laser},
+  year      = {2018},
+  number    = {2},
+  pages     = {126--129},
+  volume    = {14},
+  publisher = {Nature Publishing Group},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
