--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -282,6 +282,7 @@
 \begin{acronym}[XXXXX]
 	\acro{CDI}{Coherent Diffractive Imaging}
 	\acro{IDI}{Incoherent Diffractive Imaging}
+	\acro{FEL}{Free Electron Laser}
 	\acro{DoC}{Degree of Coherence}
 	\acro{HBT}{Hanburry Brown Twiss}
 	\acro{NP}{Nano particle}
