--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -128,7 +128,7 @@ Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaA
 
 
 \section{Setup}
-The setup used at EH5 at SACLA is shown in \fref{fig:setup}. 
+The setup used at the experimental station EH5 at SACLA is shown in \fref{fig:setup}. 
 
 The sample was mounted in an XXX angle to the beam on an XXX axis stage to allow scanning of the sample, ensure perpendicularly of the scanning directions to the beam to stay within the Rayleigh length of approx. XXX\,um while also ensuring a parallel alignment of the sample surface to one of the detectors. Overall, two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a Short Working Distance octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}$ ranging from XXX to XXX cm. To supress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the dual detector
 An L-shaped aluminum plate was installed to reduce stray light as well as to allow mounting of the beamstop and filters between sample and detector.
@@ -263,7 +263,7 @@ The detector shift is corrected before calculating the correlations, the rotatio
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
-	\caption{User interface for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
+	\caption[User Interface for Kossel line based alignment]{User interface for performing a regression of the detector orientation and position to the Kossel lines visible in experimental data. The lines can be automatically identified,  be  manually modified afterwards and the reflections considered selected. This tool is used to perform the alignment for the GaAs single crystal samples.}
 	\label{fig:kosselfit}
 \end{figure}
 
